Fix removeDevice.